@@ -5,8 +5,8 @@ JSON (JavaScript Object Notation) is a lightweight data-interchange format.
 It can represent integer, real number, string, an ordered sequence of 
 value, and a collection of name/value pairs.
 
-JsonCpp is a simple API to manipulate JSON value, handle serialization 
-and unserialization to string.
+JsonCpp (http://jsoncpp.sourceforge.net/) is a simple API to manipulate 
+JSON value, handle serialization and unserialization to string.
 
 It can also preserve existing comment in unserialization/serialization steps,
 making it a convenient format to store user input files.
@@ -90,6 +90,39 @@ Notes that the documentation is also available for download as a tarball.
 The documentation of the latest release is available online at:
 http://jsoncpp.sourceforge.net/
 
+* Generating amalgated source and header
+  ======================================
+
+JsonCpp is provided with a script to generate a single header and a single
+source file to ease inclusion in an existing project.
+
+The amalgated source can be generated at any time by running the following
+command from the top-directory (requires python 2.6):
+
+python amalgate.py
+
+It is possible to specify header name. See -h options for detail. By default,
+the following files are generated:
+- dist/jsoncpp.cpp: source file that need to be added to your project
+- dist/json/json.h: header file corresponding to use in your project. It is
+equivalent to including json/json.h in non-amalgated source. This header
+only depends on standard headers. 
+- dist/json/json-forwards.h: header the provides forward declaration
+of all JsonCpp types. This typically what should be included in headers to
+speed-up compilation.
+
+The amalgated sources are generated by concatenating JsonCpp source in the
+correct order and defining macro JSON_IS_AMALGATED to prevent inclusion of
+other headers.
+
+* Using json-cpp in your project:
+  ===============================
+
+include/ should be added to your compiler include path. jsoncpp headers 
+should be included as follow:
+
+#include <json/json.h>
+  
 
 * Adding a reader/writer test:
   ============================
